--- a/z3.ipynb
+++ b/z3.ipynb
@@ -8,6 +8,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Everything frmo previous sample notebook\n",
+    "\n",
+    "### Plus\n",
+    "- Use value-sharing feature of dotnet interactive to switch context and questions with prompty orchestrator kernel\n",
+    "- Use RAG/Example to teach GPT on Z3 library\n",
+    "- Use Z3 toresolve math problem"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -38,7 +50,6 @@
     "#r \"nuget: Microsoft.SemanticKernel.Abstractions, 1.22.0\"\n",
     "#r \"nuget:Z3.Linq,*-*\"\n",
     "#r \"nuget:Z3.Linq.Examples,*-*\"\n",
-    "\n",
     "#r \"nuget:AutoGen,0.2.1\"\n",
     "#r \"nuget:AutoGen.DotnetInteractive,0.2.1\""
    ]
@@ -279,7 +290,7 @@
     {
      "data": {
       "text/html": [
-       "<div><form id=\"cd4412c69fc04cf1976b18cb7ecd6365\"><div><label for=\"azureOpenaiEndpoint\">Please enter a value for parameter: --azure-openai-endpoint</label><br /><input required type=\"text\" id=\"azureOpenaiEndpoint\" name=\"azureOpenaiEndpoint\" value=\"https://xiaoyun-openai-canada-east.openai.azure.com/\" onkeydown=\"event.stopPropagation()\" /></div><div><label for=\"azureOpenaiDeploymentName\">Please enter a value for parameter: --azure-openai-deployment-name</label><br /><input required type=\"text\" id=\"azureOpenaiDeploymentName\" name=\"azureOpenaiDeploymentName\" value=\"gpt-4o\" onkeydown=\"event.stopPropagation()\" /></div><div><label for=\"azureOpenaiApikey\">Please enter a value for parameter: --azure-openai-apikey</label><br /><input required type=\"password\" id=\"azureOpenaiApikey\" name=\"azureOpenaiApikey\" value=\"53547b13b52046709973aac63084e390\" onkeydown=\"event.stopPropagation()\" /></div><button onclick=\"event.preventDefault(); sendSendValueCommand(document.getElementById(&#39;cd4412c69fc04cf1976b18cb7ecd6365&#39;));\">Ok</button></form></div>"
+       "<div><form id=\"e16a2ea8b7e948c6bf06db33c3b915b2\"><div><label for=\"azureOpenaiEndpoint\">Please enter a value for parameter: --azure-openai-endpoint</label><br /><input required type=\"text\" id=\"azureOpenaiEndpoint\" name=\"azureOpenaiEndpoint\" value=\"https://xiaoyun-openai-canada-east.openai.azure.com/\" onkeydown=\"event.stopPropagation()\" /></div><div><label for=\"azureOpenaiDeploymentName\">Please enter a value for parameter: --azure-openai-deployment-name</label><br /><input required type=\"text\" id=\"azureOpenaiDeploymentName\" name=\"azureOpenaiDeploymentName\" value=\"gpt-4o\" onkeydown=\"event.stopPropagation()\" /></div><div><label for=\"azureOpenaiApikey\">Please enter a value for parameter: --azure-openai-apikey</label><br /><input required type=\"password\" id=\"azureOpenaiApikey\" name=\"azureOpenaiApikey\" value=\"53547b13b52046709973aac63084e390\" onkeydown=\"event.stopPropagation()\" /></div><button onclick=\"event.preventDefault(); sendSendValueCommand(document.getElementById(&#39;e16a2ea8b7e948c6bf06db33c3b915b2&#39;));\">Ok</button></form></div>"
       ]
      },
      "metadata": {},
@@ -301,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {
     "dotnet_interactive": {
      "language": "prompty"
@@ -316,12 +327,16 @@
    "outputs": [],
    "source": [
     "---\n",
-    "name: Z3Geeno\n",
+    "name: ExamplePrompt\n",
     "description: A prompt that uses context to ground an incoming question\n",
     "authors:\n",
     "  - Seth Juarez\n",
     "model:\n",
     "  api: chat\n",
+    "  configuration:\n",
+    "    type: azure_openai\n",
+    "    azure_endpoint: ${env:AZURE_OPENAI_ENDPOINT}\n",
+    "    azure_deployment: <your-deployment>\n",
     "  parameters:\n",
     "    max_tokens: 3000\n",
     "sample:\n",
@@ -393,6 +408,48 @@
     "}\n",
     "```\n",
     "\n",
+    "## Problem 3 - Price Optimised Oil Purchasing\n",
+    "\n",
+    "In this example, we have two  countries that produce crude oil which we refine into three end-products: gasoline, jet fuel, and lubricant. The crude oil from each country yields different quantities of end-products once the oil is refined:\n",
+    "\n",
+    "|            | Saudi Arabia  | Venezuela      |\n",
+    "|---         | ---           | ---            |\n",
+    "| Cost       | $20 / barrel  | $15 / barrel   |\n",
+    "| Max Order  | 9000 barrels  | 6000 barrels   |\n",
+    "| Refining % | 30% gasolene  | 40% gasolene   |\n",
+    "|            | 40% jet fuel  | 20% jet fuel   |\n",
+    "|            | 20% lubricant | 30% lubricant  |\n",
+    "|            | 10% waste     | 10% waste      |\n",
+    "\n",
+    "Given we need to produce the following volume of refined end-product:\n",
+    "\n",
+    "| Product   | Amount (barrels) |\n",
+    "| ---       | ---              |\n",
+    "| Gasolene  | 1900             |\n",
+    "| Jet Fuel  | 1500             |\n",
+    "| Lubricant | 500              |\n",
+    "\n",
+    " What is the most cost efficient purchase strategy of crude oil from Saudi Arabia and Venezuela?\n",
+    "\n",
+    "## Solution for Problem 3\n",
+    "```csharp\n",
+    "using (var ctx = new Z3Context())\n",
+    "{\n",
+    "    var theorem = from t in ctx.NewTheorem<(double sa, double vz)>()\n",
+    "                  where 0.3 * t.sa + 0.4 * t.vz >= 1900 // Gasolene\n",
+    "                  where 0.4 * t.sa + 0.2 * t.vz >= 1500 // Jet fuel\n",
+    "                  where 0.2 * t.sa + 0.3 * t.vz >= 500  // Lubricant\n",
+    "                  where 0 <= t.sa && t.sa <= 9000 // Max # barrels we can purchase\n",
+    "                  where 0 <= t.vz && t.vz <= 6000 // Max # barrels we can purchase\n",
+    "                  orderby (20.0 * t.sa) + (15.0 * t.vz)\n",
+    "                  select t;\n",
+    "\n",
+    "    var result = theorem.Solve();\n",
+    "\n",
+    "    Console.WriteLine(string.Create(CultureInfo.CreateSpecificCulture(\"en-US\"), $\"Saudia Arabia: {result.sa} barrels ({(result.sa * 20):C}), Venezuela: {result.vz} barrels ({(result.vz * 15):C})\"));\n",
+    "}\n",
+    "```\n",
+    "\n",
     "# Customer\n",
     "You are helping {{firstName}} to find answers to their questions.\n",
     "Use their name to address them in your responses.\n",
@@ -402,8 +459,14 @@
     "\n",
     "Here are a few tips to keep in mind when using Z3.Linq library:\n",
     "- Don't create anonymous class after select. After you resolve the result, simply print the result to console.\n",
-    "- Use top-level statement. Don't use `let` in Linq.\n",
+    "- Use top-level statement.\n",
     "- Always use `using` statement rather than `using` declarations.\n",
+    "- Don't use `let` statement in Linq.\n",
+    "- The only available fields for `t` is `X1`, `X2`, `X3` and so on. All other fields are unavailable.\n",
+    "- Response and equations should be formated using latex\n",
+    "- Use `orderby` statement when optimize the theorem\n",
+    "- Always include the using statement for Z3.Linq, Z3.Linq.Example\n",
+    "\n",
     "e.g. \n",
     "```csharp\n",
     "using (var ctx = new Z3Context())\n",
@@ -420,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -461,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {
     "dotnet_interactive": {
      "language": "orchestrator-kernel"
@@ -477,88 +540,12 @@
     {
      "data": {
       "text/plain": [
-       "Certainly, Geeno! Let's resolve the problem of finding the most cost-efficient purchasing strategy for crude oil using Z3.Linq in C#. Here's the solution:\n",
+       "Geeno, here's the most cost-efficient purchase strategy for crude oil from Saudi Arabia and Venezuela:\n",
        "\n",
-       "1. **Define Variables:**\n",
-       "   - Let \\( x \\) represent the number of barrels of crude oil to purchase from Saudi Arabia.\n",
-       "   - Let \\( y \\) represent the number of barrels of crude oil to purchase from Venezuela.\n",
+       "- **Saudi Arabia**: 2200 barrels costing $44,000.00\n",
+       "- **Venezuela**: 3100 barrels costing $46,500.00\n",
        "\n",
-       "2. **Constraints:**\n",
-       "   - Cost of crude oil: \n",
-       "     \\[\n",
-       "     \\text{Total cost} = 20x + 15y\n",
-       "     \\]\n",
-       "   - Production limits:\n",
-       "     \\[\n",
-       "     0 \\leq x \\leq 9000\n",
-       "     \\]\n",
-       "     \\[\n",
-       "     0 \\leq y \\leq 6000\n",
-       "     \\]\n",
-       "   - Refining constraints:\n",
-       "     - Gasoline: \n",
-       "       \\[\n",
-       "       0.3x + 0.4y \\geq 1900\n",
-       "       \\]\n",
-       "     - Jet Fuel: \n",
-       "       \\[\n",
-       "       0.4x + 0.2y \\geq 1500\n",
-       "       \\]\n",
-       "     - Lubricant: \n",
-       "       \\[\n",
-       "       0.2x + 0.3y \\geq 500\n",
-       "       \\]\n",
-       "\n",
-       "3. **Objective:** \n",
-       "   Minimize the cost:\n",
-       "   \\[\n",
-       "   \\min 20x + 15y\n",
-       "   \\]\n",
-       "\n",
-       "Here's the C# code using Z3.Linq to solve this:\n",
-       "\n",
-       "```csharp\n",
-       "using System;\n",
-       "using Z3.Linq;\n",
-       "\n",
-       "using (var ctx = new Z3Context())\n",
-       "{\n",
-       "    var result = from t in ctx.NewTheorem<Symbols<int, int>>()\n",
-       "                 where 0 <= t.X1 && t.X1 <= 9000             // Saudi Arabia barrels constraint\n",
-       "                 where 0 <= t.X2 && t.X2 <= 6000             // Venezuela barrels constraint\n",
-       "                 where 0.3 * t.X1 + 0.4 * t.X2 >= 1900       // Gasoline production constraint\n",
-       "                 where 0.4 * t.X1 + 0.2 * t.X2 >= 1500       // Jet Fuel production constraint\n",
-       "                 where 0.2 * t.X1 + 0.3 * t.X2 >= 500        // Lubricant production constraint\n",
-       "                 orderby 20 * t.X1 + 15 * t.X2               // Minimizing cost\n",
-       "                 select t;\n",
-       "\n",
-       "    var solution = result.Solve();\n",
-       "    Console.WriteLine($\"Best strategy: Order {solution.X1} barrels from Saudi Arabia and {solution.X2} barrels from Venezuela.\");\n",
-       "}\n",
-       "```\n",
-       "\n",
-       "**Explanation:**\n",
-       "- We define the constraints for production volume and order limits.\n",
-       "- We add constraints for refined product minimum requirements.\n",
-       "- We use `orderby` to minimize the cost.\n",
-       "\n",
-       "This script will output the optimal number of barrels to order from Saudi Arabia and Venezuela. Let's execute it to find the answer!Geeno, we have the results!\n",
-       "\n",
-       "The most cost-efficient strategy for purchasing crude oil is:\n",
-       "\n",
-       "- Order **2200 barrels** from Saudi Arabia.\n",
-       "- Order **3100 barrels** from Venezuela.\n",
-       "\n",
-       "This strategy satisfies all the production constraints and minimizes the cost.\n",
-       "\n",
-       "To summarize in LaTeX:\n",
-       "\n",
-       "\\[\n",
-       "\\begin{align*}\n",
-       "\\text{Crude oil from Saudi Arabia:} & \\quad 2200 \\text{ barrels} \\\\\n",
-       "\\text{Crude oil from Venezuela:} & \\quad 3100 \\text{ barrels} \\\\\n",
-       "\\end{align*}\n",
-       "\\]"
+       "This strategy ensures that the necessary volumes of gasoline, jet fuel, and lubricant are refined at the lowest possible cost."
       ]
      },
      "metadata": {},
@@ -568,17 +555,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best strategy: Order 2200 barrels from Saudi Arabia and 3100 barrels from Venezuela.\r\n"
+      "Saudi Arabia: 2200 barrels ($44,000.00), Venezuela: 3100 barrels ($46,500.00)\r\n"
      ]
     }
    ],
    "source": [
-    "Resolve the problem in the context using Z3, format your answer with latex"
+    "Resolve the problem in the context using Z3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {
     "dotnet_interactive": {
      "language": "orchestrator-kernel"
@@ -597,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {
     "dotnet_interactive": {
      "language": "orchestrator-kernel"
@@ -612,6 +599,22 @@
    "outputs": [],
    "source": [
     "#!set --value @value:shippingCost --name context\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "using Z3.Linq;\n",
+    "using Z3.Linq.Examples;\n",
+    "using Z3.Linq.Examples.RiverCrossing;\n",
+    "using Z3.Linq.Examples.Sudoku;"
    ]
   }
  ],
