--- a/z3.ipynb
+++ b/z3.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "### Plus\n",
     "- Use value-sharing feature of dotnet interactive to switch context and questions with prompty orchestrator kernel\n",
-    "- Use RAG/Example to teach GPT on Z3 library\n",
+    "- Use Example to teach GPT on Z3 library\n",
     "- Use Z3 toresolve math problem"
    ]
   },
@@ -71,6 +71,13 @@
    "outputs": [],
    "source": [
     "#r \"Interactive.Prompty/Interactive.Prompty/bin/Debug/net8.0/Interactive.Prompty.dll\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create the problem definitions, storing them in value kernel for later use"
    ]
   },
   {
@@ -311,6 +318,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create a prompty configuration to use Z3 Linq and address customer request in the context of problems that can be shared targeting the `{{context}}` variable\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
@@ -523,44 +537,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "orchestrator-kernel"
-    },
-    "polyglot_notebook": {
-     "kernelName": "orchestrator-kernel"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Geeno, here's the most cost-efficient purchase strategy for crude oil from Saudi Arabia and Venezuela:\n",
-       "\n",
-       "- **Saudi Arabia**: 2200 barrels costing $44,000.00\n",
-       "- **Venezuela**: 3100 barrels costing $46,500.00\n",
-       "\n",
-       "This strategy ensures that the necessary volumes of gasoline, jet fuel, and lubricant are refined at the lowest possible cost."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saudi Arabia: 2200 barrels ($44,000.00), Venezuela: 3100 barrels ($46,500.00)\r\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "Resolve the problem in the context using Z3"
+    "# Run one of the following cell to set the context"
    ]
   },
   {
@@ -602,25 +582,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ask away!"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {
     "dotnet_interactive": {
-     "language": "csharp"
+     "language": "orchestrator-kernel"
     },
     "polyglot_notebook": {
-     "kernelName": "csharp"
+     "kernelName": "orchestrator-kernel"
     },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Geeno, here's the most cost-efficient purchase strategy for crude oil from Saudi Arabia and Venezuela:\n",
+       "\n",
+       "- **Saudi Arabia**: 2200 barrels costing $44,000.00\n",
+       "- **Venezuela**: 3100 barrels costing $46,500.00\n",
+       "\n",
+       "This strategy ensures that the necessary volumes of gasoline, jet fuel, and lubricant are refined at the lowest possible cost."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saudi Arabia: 2200 barrels ($44,000.00), Venezuela: 3100 barrels ($46,500.00)\r\n"
+     ]
+    }
+   ],
    "source": [
-    "using Z3.Linq;\n",
-    "using Z3.Linq.Examples;\n",
-    "using Z3.Linq.Examples.RiverCrossing;\n",
-    "using Z3.Linq.Examples.Sudoku;"
+    "Resolve the problem in the context using Z3"
    ]
   }
  ],
