--- a/z3.ipynb
+++ b/z3.ipynb
@@ -321,7 +321,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Create a prompty configuration to use Z3 Linq and address customer request in the context of problems that can be shared targeting the `{{context}}` variable\n"
+    "# Create a prompty configuration for Z3 Linq problem-solving\n",
+    "\n",
+    "In the cell below, we'll create a prompty configuration that uses Z3 Linq to address customer requests in the context of mathematical and logical problems. This configuration will:\n",
+    "\n",
+    "1. Set up a system prompt that instructs the AI to use Z3 Linq for problem-solving.\n",
+    "2. Provide a reference example of Z3 Linq usage.\n",
+    "3. Use the `{{context}}` variable to incorporate specific problem details.\n",
+    "4. Generate C# code that utilizes the Z3.Linq library to calculate answers.\n",
+    "\n",
+    "This configuration will enable us to efficiently solve various mathematical and logical problems using Z3 theorem prover within our interactive environment.\n"
    ]
   },
   {
@@ -540,7 +549,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Run one of the following cell to set the context"
+    "# Context Setting\n",
+    "\n",
+    "The following cells allow you to set the context for the Z3 problem-solving. You have two options:\n",
+    "\n",
+    "1. Linear Algebra Problem: This sets the context to solve a system of linear equations and inequalities with three variables.\n",
+    "\n",
+    "2. Oil Purchasing Optimization: This sets the context to solve a cost optimization problem for purchasing crude oil from two countries with different refining yields.\n",
+    "\n",
+    "Choose one of the following cells to run and set the desired context before proceeding to ask the AI to resolve the problem using Z3."
    ]
   },
   {
